--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ Thumbs.db
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
@@ -110,3 +110,4 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/androidstudio
 .idea/copyright/
+gradle/wrapper/gradle-wrapper.jar
